TEST_PROGRAMS/typing_benchmarks/invalid/block_scope2.go
package main

func main() {
	if true {
		var x int
	}
	println(x)
}
